# mlops-zoomcamp

./: .gitignore  README.md  pyproject.toml
01-Intro/: homework.ipynb
02-experiment-tracking/: homework.ipynb  hpo.py  mlflow.db  preprocess_data.py  register_model.py  requirements.txt  train.py
02-experiment-tracking/data/: green_tripdata_2021-01.parquet  green_tripdata_2021-02.parquet  green_tripdata_2021-03.parquet
02-experiment-tracking/mlruns/1/de64166237ba414db76d18169705d599/artifacts/model/: MLmodel  model.pkl
02-experiment-tracking/mlruns/3/00f5f42fa9d74e91ae430bcae8061d24/artifacts/model/: MLmodel
02-experiment-tracking/mlruns/3/03312dfd03234eeaabe57dc70bdc1a17/artifacts/model/: MLmodel  model.pkl
02-experiment-tracking/output/: test.pkl  train.pkl  valid.pkl
03-orchestration/: homework.py  prefect_deploy.py
Week_1/: homework.ipynb
Week_2/: homework.ipynb
Week_2/scripts/: hpo.py  register_model.py  train.py
Week_3/: Dockerfile  docker-compose.yml
Week_3/mlops/: metadata.yaml
Week_3/mlops/homework_3/: global_data_products.yaml  metadata.yaml
Week_3/mlops/homework_3/data_exporters/: register_model.py
Week_3/mlops/homework_3/data_loaders/: ingest.py
Week_3/mlops/homework_3/pipelines/homework_pipeline/: metadata.yaml
Week_3/mlops/homework_3/transformers/: prepare.py  train.py
Week_3/mlops/presenters/overview/dashboard/: block_layout.yaml
Week_4/: Dockerfile  Pipfile  README.md  predict.ipynb  predict.py
Week_5/: baseline_model_nyc_taxi_data.ipynb  evidently_metrics_calculation.py
Week_5/dashboards/: data_drift.json
(+176 files in other folders)
