[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Homework and project for MLOps Zoomcamp course"
authors = ["Yorgos Papageorgiou"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
pyarrow = "^16.1.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
