[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Homework and project for MLOps Zoomcamp course"
authors = ["Yorgos Papageorgiou"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
pyarrow = "<16"
seaborn = "^0.13.2"
mlflow = "^2.13.0"
xgboost = "^2.0.3"
hyperopt = "^0.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
